# opengl_engine

./: .gitignore  Cargo.toml  README.md
embed-shader-source/: Cargo.toml
embed-shader-source/src/: lib.rs
gl_types/: Cargo.toml
gl_types/multi-impl/: Cargo.toml
gl_types/multi-impl/src/: lib.rs
gl_types/multi-impl/tests/: test.rs
gl_types/src/: element_wise.rs  lib.rs
gl_types/src/functions/: angle_trig.rs  clip_space.rs  geometric.rs  matrix.rs  mod.rs  transform.rs
gl_types/src/matrices/: mat2.rs  mat3.rs  mat4.rs  mod.rs
gl_types/src/vectors/: mod.rs  vec2.rs  vec3.rs  vec4.rs
gl_types/swizz/: Cargo.toml
gl_types/swizz/src/: lib.rs
gl_types/swizz/tests/: test.rs
gl_types/tests/: integration_tests.rs
src/: main.rs
src/engine/: app.rs  engine.rs  errors.rs  glm.rs  input.rs  mod.rs  vectors.rs
src/engine/component/: mod.rs
src/engine/component/components/: transform.rs
src/engine/data_structures/: mod.rs  vec_allocator.rs
src/engine/data_structures/vec_allocator/: error.rs  mod.rs  vec_allocator.rs
src/engine/game_object/: game_object.rs  mod.rs  world.rs
src/engine/game_object/component/: component.rs  mod.rs
src/engine/game_object/component/components/: transform.rs
src/engine/graphics/: camera.rs  gl_enums.rs  gl_wrapper.rs  graphics.rs  image.rs  mesh.rs  mod.rs  shader.rs  shader_program.rs  sprite_renderer.rs  texture.rs  vertex_buffer.rs  vertex_objects.rs
src/engine/graphics/shader/: mod.rs  shader.rs  shader_program.rs
src/engine/graphics/shaders/: sprite.frag  sprite.vert  sprite_struct_test.frag  sprite_struct_test.vert  terrain.frag  terrain.vert  vertex_color.frag  vertex_color.vert
src/engine/graphics/sprite_renderer/: component.rs  components.rs  mod.rs  sprite_renderer.rs  sprite_sheet.rs
src/engine/graphics/terrain/: mod.rs  terrain.rs  terrain_renderer.rs
src/engine/resources/: mod.rs  resource_manager.rs
test_files/: .gitignore
test_files/misc/: .gitignore
