[package]
name = "opengl_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
backtrace = "0.3.73"
const_format = "0.2.32"
downcast-rs = "1.2.0"
function_name = "0.3.0"
gl46 = "0.2.1"
gl_types = { git = "https://github.com/BrianPAmsler/gl_types.git", version = "0.1.0" }
glfw = "0.54.0"
image = "0.25.4"
include-crypt-bytes = "0.1.3"
itertools = "0.13.0"
libc = "0.2.151"
libffi = "3.2.0"
native-dialog = "0.7.0"
rand = "0.8.5"
regex = "1.10.6"
spez = "0.1.2"
thiserror = "1.0.56"

[profile.release]
debug=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
