[package]
name = "opengl_engine"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["gl_types", "gl_types/multi-impl", "gl_types/swizz", "embed-shader-source"]
resolver = "3"

[dependencies]
gl_types = { path = "./gl_types" }
embed-shader-source = { path = "./embed-shader-source" }
backtrace = "0.3.73"
const_format = "0.2.32"
downcast-rs = "1.2.0"
function_name = "0.3.0"
gl46 = "0.2.1"
glfw = "0.54.0"
image = "0.25.4"
itertools = "0.13.0"
lazy_static = "1.5.0"
libc = "0.2.151"
libffi = "3.2.0"
native-dialog = "0.7.0"
pathbuf = "1.0.0"
regex = "1.10.6"
spez = "0.1.2"
thiserror = "1.0.56"
rand = "0.10.1"

[profile.release]
debug=true

[dev-dependencies]
tempfile = "3.24.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
