[package]
name = "gl_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.3"
multi-impl = {path = "./multi-impl"}
swizz = {path = "./swizz"}
nalgebra = "0.33.1"
typenum = "1.17.0"

[dev-dependencies]
rand = "0.8.5"
